# KazakovEquations

./: .gitignore
normalize/: CMakeLists.txt  channel.cpp  channel.hpp  eigenfuncs.mw  energies_j0m0.txt  energies_j20m0.txt  energies_j5m0.txt  filelister.cpp  filelister.hpp  main.cpp  wavefunction.cpp  wavefunction.hpp
normalize/eifuncs_j0m0/: eifunc0.txt  eifunc1.txt  eifunc10.txt  eifunc11.txt  eifunc12.txt  eifunc13.txt  eifunc14.txt  eifunc15.txt  eifunc16.txt  eifunc17.txt  eifunc2.txt  eifunc3.txt  eifunc4.txt  eifunc5.txt  eifunc6.txt  eifunc7.txt  eifunc8.txt  eifunc9.txt
normalize/eifuncs_j1m0/: eifunc0.txt  eifunc1.txt  eifunc10.txt  eifunc11.txt  eifunc13.txt  eifunc14.txt  eifunc17.txt  eifunc2.txt  eifunc3.txt  eifunc4.txt  eifunc7.txt  eifunc9.txt
normalize/eifuncs_j1m1/: eifunc0.txt  eifunc1.txt  eifunc3.txt  eifunc5.txt  eifunc6.txt  eifunc7.txt
normalize/eifuncs_j20m0/: eifunc0.txt  eifunc1.txt  eifunc10.txt  eifunc11.txt  eifunc12.txt  eifunc2.txt  eifunc3.txt  eifunc4.txt  eifunc5.txt  eifunc6.txt  eifunc7.txt  eifunc8.txt  eifunc9.txt
normalize/eifuncs_j5m0/: eifunc0.txt  eifunc1.txt  eifunc10.txt  eifunc11.txt  eifunc12.txt  eifunc13.txt  eifunc14.txt  eifunc15.txt  eifunc16.txt  eifunc2.txt  eifunc3.txt  eifunc4.txt  eifunc5.txt  eifunc6.txt  eifunc7.txt  eifunc8.txt  eifunc9.txt
offdiag_coriolis/: CMakeCache.txt  CMakeLists.txt  Makefile  channel.cpp  channel.hpp  cmake_install.cmake  energies_j1m0.txt  energies_j1m1.txt  filelister.cpp  main.cpp  normalize  wavefunction.cpp  wavefunction.hpp
offdiag_coriolis/eifuncs_j1m-1/: eifunc1.txt  eifunc5.txt  eifunc7.txt
offdiag_coriolis/eifuncs_j1m-1_nch12/: eifunc0.txt  eifunc1.txt  eifunc2.txt  eifunc3.txt  eifunc4.txt  eifunc5.txt  eifunc6.txt  eifunc7.txt  eifunc8.txt  reverse.py
offdiag_coriolis/eifuncs_j1m-1_nch8/: eifunc0.txt  (+5 more)
solver_clion/: CMakeCache.txt  CMakeLists.txt  FindEigen3.cmake  Makefile  cmake_install.cmake  constants.hpp  eigenvalue.cpp  eigenvalue.hpp  equations.cpp  equations.hpp  main.cpp  manager.py  parity.hpp  precise_eigenvalue_finder.cpp  precise_eigenvalue_finder.hpp  preliminary_eigenvalue_finder.cpp  preliminary_eigenvalue_finder.hpp  solver_clion  solver_clion.cbp
(+234 files in other folders)
